[package]
name = "rust_evm_indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
futures = {version = "0.3.28"}
log = "0.4.19"
postgres = {version = "0.19.5", features = ["with-serde_json-1"]}
reqwest = {version="0.11.18", features = ["json"]}
serde_json = "1.0.104"
tokio = {version= "1.29.1", features = ["full"]}
web3 = "0.19.0"

[[bin]]
name = "rust_evm_indexer"
path = "main.rs"
